# Camera

./: CMakeLists.txt  Camera.pro  README.md
include/: Camera.h  NGLScene.h
shaders/: PBRFragment.glsl  PhongFragment.glsl  PhongVertex.glsl
src/: Camera.cpp  NGLScene.cpp  main.cpp
